<resources>
    //layoutstrings
    <string name="ema_strings_app_name">EMA</string>
    <string name="ema_strings_performances_dos_alunos">Performances dos Alunos</string>
    <string name="ema_strings_adicionar_nova_performance">Adicionar nova performance</string>
    <string name="ema_strings_ema_escola_de_musica">EMA - Escola de Música</string>
    <string name="ema_strings_nome_de_usuario">Nome de Usuário</string>
    <string name="ema_strings_senha">Senha</string>
    <string name="ema_strings_login">Login</string>
    <string name="ema_strings_cadastrar">Cadastrar</string>
    <string name="ema_strings_selecione_um_grupo_para_participar_da_conversa">Selecione um grupo para participar da conversa.</string>
    <string name="ema_strings_grupos_de_estudo">Grupos de Estudo</string>
    <string name="ema_strings_nome_do_grupo">Nome do Grupo</string>
    <string name="ema_strings_digite_sua_mensagem">Digite sua mensagem...</string>
    <string name="ema_strings_enviar">Enviar</string>
    <string name="ema_strings_ola_usuario">Olá, Usuário!</string>
    <string name="ema_strings_seu_dashboard">Seu Dashboard</string>
    <string name="ema_strings_acompanhamento_de_progresso">Acompanhamento de Progresso</string>
    <string name="ema_strings_tempo_de_estudo_hoje_0_minutos">Tempo de estudo hoje: 0 minutos</string>
    <string name="ema_strings_ainda_n_o_estudou_hoje_que_tal_comecar">Ainda não estudou hoje. Que tal começar?</string>
    <string name="ema_strings_iniciar_estudo">Iniciar Estudo</string>
    <string name="ema_strings_compartilhar_performance">Compartilhar Performance</string>
    <string name="ema_strings_sair">Sair</string>
    <string name="ema_strings_logo_ema">Logo EMA</string>
    <string name="ema_strings_escola_de_musica_ema">Escola de Música EMA</string>
    <string name="ema_strings_email_de_usuario">Email de Usuário</string>
    <string name="ema_strings_historico_de_estudo">Histórico de Estudo</string>
    <string name="ema_strings_editar_seu_perfil">Editar seu Perfil</string>
    <string name="ema_strings_nome_completo">Nome Completo</string>
    <string name="ema_strings_celular_ex_ddnnnnn_nnnn">Celular (Ex: DDNNNNN-NNNN)</string>
    <string name="ema_strings_instrumento_que_esta_aprendendo">Instrumento que está aprendendo</string>
    <string name="ema_strings_idade_12_17">Idade (12-17)</string>
    <string name="ema_strings_endere_o_completo">Endereço Completo</string>
    <string name="ema_strings_salvar_alteracoes">Salvar Alterações</string>
    <string name="ema_strings_complete_seu_perfil">Complete seu Perfil</string>
    <string name="ema_strings_salvar_perfil">Salvar Perfil</string>
    <string name="ema_strings_titulo_da_performance">Título da Performance</string>
    <string name="ema_strings_link_do_video_ex_youtube">Link do Vídeo (Ex: YouTube)</string>
    <string name="ema_strings_publicar">Publicar</string>
    <string name="ema_strings_remetente">Remetente</string>
    <string name="ema_strings_conteudo_da_mensagem">Conteúdo da mensagem.</string>
    <string name="ema_strings_hh_mm_dd_mm">HH:mm - dd/MM</string>
    <string name="ema_strings_por_nome_do_usu_rio">Por: Nome do Usuário</string>
    <string name="ema_strings_link_http_youtube_com_link_do_video">Link: http://youtube.com/link-do-video</string>
    <string name="ema_strings_descri_o_do_grupo_de_estudo">Descrição do grupo de estudo.</string>
    <string name="ema_strings_membros_0">Membros: 0</string>
    <string name="ema_strings_entrar_no_grupo">Entrar no Grupo</string>
    <string name="ema_strings_dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="ema_strings_hh_mm_ss">HH:MM:SS</string>

    // Activity
    <string name="ema_strings_sair_do_aplicativo">Sair do Aplicativo</string>
    <string name="ema_strings_tem_certeza_que_deseja_sair_do_aplicativo">Tem certeza que deseja sair do EMA - Escola de Música?</string>
    <string name="ema_strings_sim">Sim</string>
    <string name="ema_strings_nao">Não</string>
    <string name="ema_strings_login_realizado_com_sucesso">Login realizado com sucesso!</string>
    <string name="ema_strings_cadastro_de_usu_rio_realizado_agora_complete_seu_perfil">Cadastro de usuário realizado! Agora complete seu perfil.</string>
    <string name="ema_strings_este_e_mail_j_est_cadastrado">Este e-mail já está cadastrado.</string>
    <string name="ema_strings_a_senha_muito_fraca_use_uma_senha_mais_forte_m_nimo_6_caracteres">A senha é muito fraca. Use uma senha mais forte (mínimo 6 caracteres).</string>
    <string name="ema_strings_credenciais_inv_lidas_verifique_o_e_mail_e_a_senha">Credenciais inválidas. Verifique o e-mail e a senha.</string>
    <string name="ema_strings_ocorreu_um_erro">Ocorreu um erro: %1$s</string>
    <string name="ema_strings_preencha_o_e_mail_e_a_senha">Preencha o e-mail e a senha.</string>
    <string name="ema_strings_a_senha_deve_ter_no_m_nimo_6_caracteres">A senha deve ter no mínimo 6 caracteres.</string>
    <string name="ema_strings_grupo_selecionado">Grupo Selecionado</string>
    <string name="ema_strings_selecione_um_grupo_para_enviar_mensagens">Selecione um grupo para enviar mensagens.</string>
    <string name="ema_strings_membros">Membros: %1$s</string>
    <string name="ema_strings_ver_grupo">Ver Grupo</string>
    <string name="ema_strings_voc_entrou_no_grupo">Você entrou no grupo \'%1$s\'!</string>
    <string name="ema_strings_usu_rio_desconhecido">Usuário Desconhecido</string>
    <string name="ema_strings_ola">Olá, %1$s!</string>
    <string name="ema_strings_tempo_de_estudo">Tempo de estudo: %1$s</string>
    <string name="ema_strings_parar_estudo">Parar Estudo</string>
    <string name="ema_strings_sess_o_de_estudo_encerrada_e_tempo_salvo">Sessão de estudo encerrada e tempo salvo!</string>
    <string name="ema_strings_sess_o_de_estudo_iniciada">Sessão de estudo iniciada!</string>
    <string name="ema_strings_logout_realizado_com_sucesso">Logout realizado com sucesso.</string>
    <string name="ema_strings_yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="ema_strings_editar_perfil">Editar Perfil</string>
    <string name="ema_strings_perfil_atualizado_com_sucesso">Perfil atualizado com sucesso!</string>
    <string name="ema_strings_erro_ao_atualizar_perfil_tente_novamente">Erro ao atualizar perfil. Tente novamente.</string>
    <string name="ema_strings_por_favor_preencha_todos_os_campos">Por favor, preencha todos os campos.</string>
    <string name="ema_strings_a_idade_deve_ser_entre_12_e_17_anos">A idade deve ser entre 12 e 17 anos.</string>
    <string name="ema_strings_publicar_nova_performance">Publicar Nova Performance</string>
    <string name="ema_strings_performance_publicada">Performance publicada!</string>
    <string name="ema_strings_preencha_todos_os_campos">Preencha todos os campos.</string>
    <string name="ema_strings_por">Por: %1$s</string>
    <string name="ema_strings_link">Link: %1$s</string>
    <string name="ema_strings_perfil_salvo_com_sucesso">Perfil salvo com sucesso!</string>
    <string name="ema_strings_erro_ao_salvar_perfil_tente_novamente">Erro ao salvar perfil. Tente novamente.</string>


</resources>