<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/tv_message_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/ema_green_dark"
        android:text="@string/ema_strings_remetente"/>

    <TextView
        android:id="@+id/tv_message_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="8dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:text="@string/ema_strings_conteudo_da_mensagem"/>

    <TextView
        android:id="@+id/tv_message_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="10sp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/ema_strings_hh_mm_dd_mm"/>

</LinearLayout>