<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ema_white"
    android:padding="16dp"
    tools:context=".activities.EditProfileActivity">

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ema_strings_editar_seu_perfil"
        android:textColor="@color/ema_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ema_strings_nome_completo"
            app:boxBackgroundColor="@color/ema_white"
            app:boxStrokeColor="@color/ema_green_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ema_strings_celular_ex_ddnnnnn_nnnn"
            app:boxBackgroundColor="@color/ema_white"
            app:boxStrokeColor="@color/ema_green_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ema_strings_instrumento_que_esta_aprendendo"
            app:boxBackgroundColor="@color/ema_white"
            app:boxStrokeColor="@color/ema_green_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_instrument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ema_strings_idade_12_17"
            app:boxBackgroundColor="@color/ema_white"
            app:boxStrokeColor="@color/ema_green_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ema_strings_endere_o_completo"
            app:boxBackgroundColor="@color/ema_white"
            app:boxStrokeColor="@color/ema_green_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress|textMultiLine"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

<Button
android:backgroundTint="@color/ema_green_main"
android:id="@+id/btn_save_profile"
android:layout_height="wrap_content"
android:layout_marginBottom="16dp"
android:layout_marginEnd="16dp"
android:layout_marginStart="16dp"
android:layout_width="0dp"
android:text="@string/ema_strings_salvar_alteracoes"
android:textColor="@color/ema_white"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>