<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/ema_strings_titulo_da_performance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_performance_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/ema_strings_link_do_video_ex_youtube">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_video_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_publish_performance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ema_strings_publicar"
        android:backgroundTint="@color/ema_green_main"
        android:textColor="@android:color/black" />

</LinearLayout>