<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ema_green_main"
    tools:context=".activities.AuthActivity">

    <ImageView
        android:id="@+id/iv_ema_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/ema_strings_logo_ema"
        android:src="@mipmap/ic_launcher_ema"
        app:layout_constraintBottom_toTopOf="@+id/tv_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/ema_strings_escola_de_musica_ema"
        android:textColor="@color/ema_white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_username_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ema_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_username_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/ema_strings_email_de_usuario"
        app:boxBackgroundColor="@color/ema_white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/et_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/ema_strings_senha"
        app:boxBackgroundColor="@color/ema_white"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/et_username_layout"
        app:layout_constraintStart_toStartOf="@+id/et_username_layout"
        app:layout_constraintTop_toBottomOf="@+id/et_username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/ema_white"
        android:text="@string/ema_strings_login"
        android:textColor="@color/ema_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
        app:layout_constraintStart_toStartOf="@+id/et_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/et_password_layout" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/ema_green_dark"
        android:text="@string/ema_strings_cadastrar"
        android:textColor="@color/ema_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>