<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ema_white"
    tools:context=".activities.CollaborationActivity">

    <TextView
        android:id="@+id/tv_collaboration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ema_strings_grupos_de_estudo"
        android:textColor="@color/ema_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_study_groups"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_select_group_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_collaboration_title"
        tools:listitem="@layout/item_study_group" />

    <TextView
        android:id="@+id/tv_select_group_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ema_strings_selecione_um_grupo_para_participar_da_conversa"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ll_group_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />


    <LinearLayout
        android:id="@+id/ll_group_chat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/ema_white"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_select_group_prompt">

        <TextView
            android:id="@+id/tv_current_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ema_green_main"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/ema_strings_nome_do_grupo"
            android:textColor="@color/ema_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_group_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            tools:listitem="@layout/item_message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ema_white"
            android:orientation="horizontal"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_message_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/ema_strings_digite_sua_mensagem"
                android:inputType="textLongMessage"
                android:maxLines="3"
                android:padding="12dp" />

            <Button
                android:id="@+id/btn_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/ema_green_dark"
                android:text="@string/ema_strings_enviar"
                android:textColor="@color/ema_white" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>